FIX: Align css to reflect AA media queries long practice Phase 7 project requirements

--- a/styles/timeline.css
+++ b/styles/timeline.css
@@ -85,3 +85,8 @@
 }
 
 /* Your code here */
+@media print {
+    .timeline-scroll-area {
+	overflow-x: visible;
+    }
+}
